--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,13 +13,26 @@
 
 .pstList {
     grid-column-end: span 8;
+    padding-top: 10px;
 }
 
 .ectList {
+    padding-top: 10px;
     width: 100%;
     height: 100%;
+    height: fit-content;
     grid-column-start: 10;
     grid-column-end: 15;
+    position: sticky;
+    top: 62px;
+}
+
+.signIn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 @media (max-width: 1000px) {
