--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -1,6 +1,6 @@
 .post {
     padding: 10px 10px 22.5px 10px;
-    border-bottom: 0.5px solid rgb(141, 141, 141);
+    border-bottom: 1px solid rgb(229 231 235);
     margin-bottom: 12.5px;
 }
 
