--- a/styles/Timetable.module.css
+++ b/styles/Timetable.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px 0 12.5px 0px;
-    border-bottom: 0.5px solid rgb(141, 141, 141);
+    border-bottom: 1px solid rgb(229 231 235);
     margin-bottom: 12.5px;
 }
 
@@ -15,5 +15,5 @@
 .timetable__item {
     font-size: 1rem;
     color: rgb(83, 83, 83);
-    margin: 13px 0 0 0;
+    margin: 5px 0 0 0;
 }
