--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard-dynamic-subset.css");
 
 html, body {
@@ -6,4 +10,34 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: "Pretendard";
+}
+
+.profile img {
+    height: 1.75rem;
+    width: auto;
+}
+
+.login {
+    display: none;
+}
+
+button:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.toggle:hover {
+    background: none !important;
+}
+
+@media (min-width: 640px) {
+    .profile img {
+        height: 2.25rem;
+        width: auto;
+    }
+    
+    .login {
+        display: flex;
+        height: 2.25rem;
+    }
 }
