--- a/styles/Write.module.css
+++ b/styles/Write.module.css
@@ -1,3 +1,11 @@
+.signIn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 .wrapper {
     width: 100vw;
     height: calc(100vh - 100px);
@@ -49,8 +57,8 @@
 
 .buttons__file {
     font-size: 1rem;
-    background-color: rgb(26 86 219);
-    color: #fff;
+    background-color: rgb(193, 193, 193);
+    color: #000;
     padding: 8px 10px;
     border-radius: 2.55px;
 }
